// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVaultFactory EthErc20Vault private vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 618855,
}
`;

exports[`EthVaultFactory EthErc20Vault private vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 467828,
}
`;

exports[`EthVaultFactory EthErc20Vault public vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 570678,
}
`;

exports[`EthVaultFactory EthErc20Vault public vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 419651,
}
`;

exports[`EthVaultFactory EthVault private vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 544950,
}
`;

exports[`EthVaultFactory EthVault private vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 393923,
}
`;

exports[`EthVaultFactory EthVault public vault deployment with own escrow gas 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 496770,
}
`;

exports[`EthVaultFactory EthVault public vault deployment with shared escrow gas 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 345743,
}
`;
